--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <html>
     <head>
         <title>Sketch</title>
+        <link href="css/stylesheet.css" type="text/css" rel="stylesheet" />
     </head>
 
     <body>
-        <h1>TEST</h1>
 
+        <div class="container">
+            
+
+        </div>
+
+        <script src="js/jquery-1.11.3.js" type="text/javascript"></script>
+        <script src="js/sketch.js" type="text/javascript"></script>
     </body>
 
 </html>
