--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     </head>
 
     <body>
-
+        <form>
+            <input type="button" value="Clear" id="clearbutton"/>
+            <input type="button" value="Resize" id="resize" />
+        </form>
         <div class="container">
             
 
